--- a/doc/02-Related-Work.tex
+++ b/doc/02-Related-Work.tex
@@ -1,7 +1,7 @@
 \section{Related Work}
 
-Peano was the first to discover the first space filling curve, with Hilbert later discovering
-a space filling curve that we concern ourselves with in this paper \cite{hilbert2004david}
+Peano discovered the first space filling curve, with Hilbert later discovering
+a space filling curve that we concern ourselves with in this paper \cite{hilbert2004david}.
 Hilbert's curve takes a one dimensional line and maps it to a compact, connected and locally connected
 set.
 For an introduction to space filling curves in addition to the necessary and sufficient
