--- a/doc/05-Conclusion.tex
+++ b/doc/05-Conclusion.tex
@@ -8,9 +8,9 @@ easily accessible reference implementations.
 Our implementation is conceptually simple, allowing for ease of implementation.
 We also provide a libre/free 
 reference implementation which can be downloaded from
-its repository \footnote{ \label{gilbert-url} \url{https://github.com/jakubcerveny/gilbert}. }
+its repository \footnote{ \label{gilbert-url} \url{https://github.com/jakubcerveny/gilbert}. }.
 
-The 2D and 3D Gilbert curve has similar locality metrics to the Hilbert
+The 2D and 3D Gilbert curve have similar locality metrics to the Hilbert
 curve, and provides adequate run-time and memory performance
 ($O(\lg N)$) for enumeration and random lookup.
 When a strict Hamiltonian path is not possible within the desired cuboid volume, the
