working on experiments and results plots (#8)
* changed norm to 2 (from 1) for point distance
* fixed bug in `create-raw-plots` script (hilbert3 not hilbert3d)
* symlink to gilbert3dpp.js

--- a/doc/03-Algorithm.tex
+++ b/doc/03-Algorithm.tex
@@ -482,7 +482,7 @@ A constant of $\frac{1}{3}$ is chosen to split the ``height-like'' dimensions fo
 while the other split is chosen at the halfway mark.
 The calculations showing that the constants chosen yield a defect reduction in each of the three eccentric $S$-splits is provided in Appendix \ref{appendix:defect}.
 
-\subsection{Extensions \textbf{d2xyz} and \textbf{xyz2d}}
+\subsection{Index to Point Mapping Functions (\textbf{d2xyz}, \textbf{xyz2d}) }
 
 To provide an index to point lookup or to convert a point to an index along the curve,
 Algorithm \ref{alg:gilbert2d} and Algorithm \ref{alg:gilbert3d} can be modified.
